--- a/style.css
+++ b/style.css
@@ -75,6 +75,16 @@ body{
     text-align: center;
 }
 
+.fade{
+    height: 300px;
+    background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.205));
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+}
+
 a {
   text-decoration: none;
 }
