update- button in intro page

--- a/style.css
+++ b/style.css
@@ -56,33 +56,63 @@ body{
 
 .chs1{
     background-color: var(--chs1) !important;
-    border-top: solid var(--ci1) 3px;
-    border-bottom: solid var(--ci1) 3px;
-    border-right: solid var(--ci1) 3px;
 }
 
 .chs2{
     background-color: var(--chs2) !important;
-    border-top: solid var(--ci1) 3px;
-    border-bottom: solid var(--ci1) 3px;
-    border-right: solid var(--ci1) 3px;
-
 }
 
 .chs3{
     background-color: var(--chs3) !important;
-    border-top: solid var(--ci1) 3px;
-    border-bottom: solid var(--ci1) 3px;
-    border-right: solid var(--ci1) 3px;
-
 }
 
 .chs4{
     background-color: var(--chs4) !important;
-    border-top: solid var(--ci1) 3px;
-    border-bottom: solid var(--ci1) 3px;
-    border-right: solid var(--ci1) 3px;
+}
 
+/*------------------------------------------------------------ Border */
+
+.border1{ 
+    /* top, left, bottom */
+    border-top: solid var(--ci1) 7px !important;
+    border-left: solid var(--ci1) 7px !important;
+    border-bottom: solid var(--ci1) 7px !important;
+}
+
+.border2{ 
+    /* top, left, right */
+    border-top: solid var(--ci1) 7px !important;
+    border-left: solid var(--ci1) 7px !important;
+    border-right: solid var(--ci1) 7px !important;
+}
+
+.border3{ 
+    /* left, right */
+    border-left: solid var(--ci1) 7px !important;
+    border-right: solid var(--ci1) 7px !important;
+}
+
+.border4{ 
+    /* left, right */
+    border-left: solid var(--ci1) 7px !important;
+    border-right: solid var(--ci1) 7px !important;
+    border-bottom: solid var(--ci1) 7px !important;
+}
+
+.b_t{
+    border-top: solid var(--ci1) 7px !important;
+}
+
+.b_b{
+    border-bottom: solid var(--ci1) 7px !important;
+}
+
+.b_l{
+    border-left: solid var(--ci1) 7px !important;
+}
+
+.b_r{
+    border-right: solid var(--ci1) 7px !important;
 }
 
 
@@ -170,6 +200,29 @@ a {
     width: 150px;
 }
 
+.col-1 {
+    height: 7.5em;
+}
+
+.character {
+    position: absolute;
+    top: -1em;
+    left: 1.5em;
+
+    width: 3em;
+    height: 3em;
+    background-color: #000;
+    /* background-image: url(img/character/c1.png); */
+}
+
 /*------------------------------------------------------------ Dice */
 
-  
+.dice{
+    transition: 0.5s;
+    max-width: 50%;
+
+}
+
+.dice:hover { 
+    transform: scale(1.05);
+  }
