--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body{
     --bg1: #FFFFFF !important;
     --bg2: #EFEFEF !important;
     --bg3: rgba(51, 51, 51, 0.45) !important;
+
+    --bd_size: 8px !important;
 }
 
 .ci1{
@@ -73,63 +75,47 @@ body{
 
 .border0{
     /* around */
-    border: solid var(--ci1) 7px !important;
+    border: solid var(--ci1) var(--bd_size) !important;
 }
 
 .border1{ 
     /* top, bottom, left */
-    border-top: solid var(--ci1) 7px !important;
-    border-left: solid var(--ci1) 7px !important;
-    border-bottom: solid var(--ci1) 7px !important;
+    border-top: solid var(--ci1) var(--bd_size) !important;
+    border-left: solid var(--ci1) var(--bd_size) !important;
+    border-bottom: solid var(--ci1) var(--bd_size) !important;
 }
 
 .border2{ 
     /* top, left, right */
-    border-top: solid var(--ci1) 7px !important;
-    border-left: solid var(--ci1) 7px !important;
-    border-right: solid var(--ci1) 7px !important;
+    border-top: solid var(--ci1) var(--bd_size) !important;
+    border-left: solid var(--ci1) var(--bd_size) !important;
+    border-right: solid var(--ci1) var(--bd_size) !important;
 }
 
 .border3{ 
     /* left, right */
-    border-left: solid var(--ci1) 7px !important;
-    border-right: solid var(--ci1) 7px !important;
+    border-left: solid var(--ci1) var(--bd_size) !important;
+    border-right: solid var(--ci1) var(--bd_size) !important;
 }
 
 .border4{ 
     /* bottom, left, right */
-    border-bottom: solid var(--ci1) 7px !important;
-    border-left: solid var(--ci1) 7px !important;
-    border-right: solid var(--ci1) 7px !important;
+    border-bottom: solid var(--ci1) var(--bd_size) !important;
+    border-left: solid var(--ci1) var(--bd_size) !important;
+    border-right: solid var(--ci1) var(--bd_size) !important;
 }
 
 .border5{
     /* top, left, right */
-    border-top: solid var(--ci1) 7px !important;
-    border-left: solid var(--ci1) 7px !important;
-    border-right: solid var(--ci1) 7px !important;
+    border-top: solid var(--ci1) var(--bd_size) !important;
+    border-left: solid var(--ci1) var(--bd_size) !important;
+    border-right: solid var(--ci1) var(--bd_size) !important;
 }
 
 .border6{
     /* bottom, top */
-    border-bottom: solid var(--ci1) 7px !important;
-    border-top: solid var(--ci1) 7px !important;
-}
-
-.b_t{
-    border-top: solid var(--ci1) 7px !important;
-}
-
-.b_b{
-    border-bottom: solid var(--ci1) 7px !important;
-}
-
-.b_l{
-    border-left: solid var(--ci1) 7px !important;
-}
-
-.b_r{
-    border-right: solid var(--ci1) 7px !important;
+    border-bottom: solid var(--ci1) var(--bd_size) !important;
+    border-top: solid var(--ci1) var(--bd_size) !important;
 }
 
 
@@ -194,6 +180,10 @@ a {
 
 /*------------------------------------------------------------ Board Game */
 
+.inner_img{
+    width: 100%;
+    height: 100%;
+}
 
 .buget_img{
     width: 4vw;
@@ -223,13 +213,16 @@ a {
 
 .character {
     position: absolute;
-    top: -1em;
+    top: -5em;
     left: 1.5em;
 
-    width: 3em;
-    height: 3em;
-    background-color: #000;
-    /* background-image: url(img/character/c1.png); */
+    width: 3.25em;
+    height: 10em;
+    /* background-color: #000; */
+    background-image: url('img/character/c1.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 /*------------------------------------------------------------ Dice */
@@ -242,4 +235,10 @@ a {
 
 .dice:hover { 
     transform: scale(1.05);
-  }
+}
+
+
+.col-1{
+    width: 7rem;
+    height: 7rem;
+}
