--- a/style.css
+++ b/style.css
@@ -247,3 +247,11 @@ a {
 .modal-header{
     border-bottom: none;
 }
+
+.sunray{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: auto;
+}
