--- a/style.css
+++ b/style.css
@@ -252,6 +252,6 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: auto;
+    width: 300px;
+    height: 300px;
 }
