--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ a {
 }
 
 .col-1 {
-    height: 6.5em;
+    height: 6em !important;
 }
 
 .character {
@@ -236,7 +236,6 @@ a {
     transform: scale(1.05);
 }
 
-
 .col-1{
     width: 7rem;
     height: 7rem;
@@ -254,4 +253,52 @@ a {
     background-position: center;
     width: 350px;
     height: 350px;
+}
+
+.none_rotate{
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -ms-animation: none !important;
+    -o-animation: none !important;
+    animation: none !important;
+}
+
+.sunRay_1{
+    background-image: url('img/modals/sunray1.png');
+}
+
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+    from {
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes rotating {
+    from {
+      -ms-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -ms-transform: rotate(360deg);
+      -moz-transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+}
+  .rotating {
+    -webkit-animation: rotating 10s linear infinite;
+    -moz-animation: rotating 10s linear infinite;
+    -ms-animation: rotating 10s linear infinite;
+    -o-animation: rotating 10s linear infinite;
+    animation: rotating 10s linear infinite;
 }
