--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #EFEFEF !important;
+    /* background-color: #002a3f !important; */
     font-family: 'Kodchasan', sans-serif;
     overflow-x: hidden !important;
 }
